<resources>
    <string name="app_name">Top100Films</string>
    <string name="mainActivityName">Популярные</string>
    <string name="buttonPopular">Популярные</string>
    <string name="buttonFavorite">Избранное</string>
    <string name="favoriteActivityName">Избранное</string>
    <string name="movie_title">Название фильма</string>
    <string name="movie_description">Описание</string>
    <string name="movie_genre">Жанры:</string>
    <string name="movie_country">Страны</string>
    <string name="no_internet_text">Произошла ошибка при загрузке данных, проверьте подключение к сети</string>
    <string name="retry_text">Повторить</string>
</resources>